--- a/config/Bot_Efotsi.ini
+++ b/config/Bot_Efotsi.ini
@@ -1,10 +1,10 @@
 [State]
-Mode=3
-Flags=PrintOff,DDOn
-Tether=10641
+Mode=1
+Flags=DBSlowOn
+Tether=NONE
 
 [Default:CastQueue]
-Print=TRUE
+Print=FALSE
 PrintTimer=10
 
 [Default:AutoSit]
@@ -19,7 +19,7 @@ AutoCast=TRUE
 AutoAttack=TRUE
 Type=Warder
 MinMana=20
-EngageTargetHpPct=95
+EngageTargetHpPct=99
 EngageTargetDistance=75
 
 [Default:Buff]
@@ -28,36 +28,42 @@ MinMana=70
 Backoff=TRUE
 BackoffTimer=300
 
+[Default:CombatBuff]
+Enabled=FALSE
+MinMana=50
+Backoff=TRUE
+BackoffTimer=300
+
 [Default]
-SpellBar=1:s_heal,2:db_slow,3:db_disem,4:dot_poi,5:dot_dis,6:dd_cold,7:OPEN,8:OPEN
+SpellBar=1:h_single,2:OPEN,3:OPEN,4:OPEN,5:OPEN,6:OPEN,7:OPEN,8:OPEN
 
 [Default:Heal]
 Enabled=TRUE
 MinMana=0
-Tank=s_heal:75
-Melee=s_heal:65
-Caster=s_heal:65
-Pet=s_heal:35
-Self=s_heal:65
-Selfpet=s_heal:35
+Tank=h_single:75
+Melee=h_single:65
+Caster=h_single:65
+Pet=h_single:75
+Self=h_single:65
+Selfpet=h_single:35
 
 [Default:DD]
 Enabled=FALSE
 MinMana=65
 MinTargetHpPct=0
-Pcts=dd_cold:50
+Pcts=
 
 [Default:Debuff]
 Enabled=FALSE
 MinMana=50
 MinTargetHpPct=65
-Pcts=db_slow:100,db_disem:95
+Pcts=
 
 [Default:Dot]
 Enabled=FALSE
 MinMana=60
 MinTargetHpPct=65
-Pcts=dot_dis:100,dot_poi:94
+Pcts=
 
 
 [Mode:2:Buff]
@@ -81,28 +87,73 @@ MinMana=40
 MainTank=fire1,b_dex,b_sta,b_ac,b_agi,b_regen,b_haste,b_shield
 Puller=wolf9
 Melee=fire1,b_haste
-Caster=fire1,b_regen
-Self=fire1,b_sta,b_selfbear,b_groupstr,b_regen,bihli36
+Caster=fire1,b_regen,wolf9
+Self=fire1,b_sta,b_selfbear,b_groupstr,b_regen,bihli36,b_groupres
+Selfpet=b_pethaste
 Bard=b_cha
 
 
-[Flag:PrintOff:CastQueue]
-Print=FALSE
+[Flag:PrintOn:CastQueue]
+Print=TRUE
 
-[Flag:DDOn:DD]
+[Flag:DBSlowOn]
+SpellBar=O:db_slow
+[Flag:DBSlowOn:Debuff]
 Enabled=TRUE
-[Flag:4:DDOn:DD]
-Enabled=TRUE
+Pcts=+db_slow:100
 
-[Flag:DebuffOn:Debuff]
+[Flag:DBDisempowerOn]
+SpellBar=O:db_disem
+[Flag:DBDisempowerOn:Debuff]
 Enabled=TRUE
-[Flag:4:DebuffOn:DD]
-Enabled=TRUE
+Pcts=+db_disem:95
 
-[Flag:DotOn:Dot]
+[Flag:DBResistOn]
+SpellBar=O:db_res
+[Flag:DBResistOn:Debuff]
 Enabled=TRUE
-[Flag:4:DotOn:DD]
+Pcts=+db_res:99
+
+[Flag:DotMagicOn]
+SpellBar=O:dot_mag
+[Flag:DotMagicOn:Dot]
 Enabled=TRUE
+Pcts=+dot_mag:90
+
+[Flag:DotPoisonOn]
+SpellBar=O:dot_poi
+[Flag:DotPoisonOn:Dot]
+Enabled=TRUE
+Pcts=+dot_poi:95
+
+[Flag:DotDiseaseOn]
+SpellBar=O:dot_dis
+[Flag:DotDiseaseOn:Dot]
+Enabled=TRUE
+Pcts=+dot_dis:100
+
+[Flag:DDPoisonOn]
+SpellBar=O:dd_poi
+[Flag:DDPoisonOn:DD]
+Enabled=TRUE
+Pcts=+dd_poi:55
+
+[Flag:DDColdOn]
+SpellBar=O:dd_cold
+[Flag:DDColdOn:DD]
+Enabled=TRUE
+Pcts=+dd_cold:45
+
+[Flag:CombatBuffsOn]
+SpellBar=O:puma50
+[Flag:CombatBuffsOn:CombatBuff]
+Enabled=TRUE
+MainTank=puma50
+
+[Flag:Speed:Buff]
+Melee=+wolf9
+Caster=+wolf9
+Healer=+wolf9
 
 
 [Spells]
@@ -133,8 +184,28 @@ b_groupdex=Statistic Buffs,Dexterity,Group v2
 b_groupagi=Statistic Buffs,Agility,Group v2
 b_groupstr=Statistic Buffs,Strength,Group v2
 b_groupvis=Utility Beneficial,Vision,Group v2
+b_groupres=Statistic Buffs,Resist Buff,Group v2
+b_pethaste=Pet,Pet Haste,Pet
 
-s_heal=Heals,Heals,Single
+h_single=Heals,Heals,Single
+
+a_master182=       Alt,Summon Personal Tribute Master ;Summon Tribute Master,4
+a_enabled252=      Alt,Spell Casting Subtlety: Enabled;Disable Ability,2
+a_origin331=       Alt,Origin                         ;Origin,1
+a_peddler453=      Alt,Summon Permutation Peddler     ;Summon Distiller Vendor,4
+a_devoted481=      Alt,Lesson of the Devoted          ;Lesson of the Devoted,4
+a_faithful482=     Alt,Infusion of the Faithful       ;Infusion of the Faithful,4
+a_jester483=       Alt,Chaotic Jester                 ;Chaotic Jester,4
+a_recovery484=     Alt,Expedient Recovery             ;Expedient Recovery,4
+a_servant485=      Alt,Steadfast Servant              ;Steadfast Servant,4
+a_recovery486=     Alt,Staunch Recovery               ;Staunch Recovery,4
+a_resolute487=     Alt,Intensity of the Resolute      ;Intensity of the Resolute,4
+a_heroes511=       Alt,Throne of Heroes               ;Throne of Heroes,4
+a_experience2000=  Alt,Armor of Experience            ;Armor of Experience I,4
+a_agent8081=       Alt,Summon Resupply Agent          ;Summon Resupply Agent,4
+a_banker8130=      Alt,Summon Clockwork Banker        ;Summon Clockwork Banker,4
+
+i_totem=           Item,Worn Totem,Blessing of Swiftness
 
 disease1=          Cure Disease                       ;Heals,Cure,Single
 aura1=             Dexterous Aura                     ;Statistic Buffs,Dexterity,Single
@@ -204,3 +275,28 @@ spirit37=          Vigilant Spirit                    ;Pet,Sum: Warder,Self
 snake37=           Venom of the Snake                 ;Damage Over Time,Poison,Single
 bihli36=           Spirit of Bih`Li                   ;Utility Beneficial,Movement,Group v2
 glamour37=         Glamour                            ;Statistic Buffs,Charisma,Single
+altuna40=          Talisman of Altuna                 ;HP Buffs,Shielding,Single
+agility41=         Agility                            ;Statistic Buffs,Agility,Single
+alacrity42=        Alacrity                           ;Utility Beneficial,Haste,Single
+poison42=          Blast of Poison                    ;Direct Damage,Poison,Single
+guardian42=        Guardian                           ;Statistic Buffs,Armor Class,Single
+odium43=           Odium                              ;Damage Over Time,Magic,Single
+stamina43=         Stamina                            ;Statistic Buffs,Stamina,Single
+blast44=           Blizzard Blast                     ;Direct Damage,Cold,Single
+healing45=         Superior Healing                   ;Heals,Heals,Single
+spirit45=          Frenzied Spirit                    ;Pet,Sum: Warder,Self
+venom47=           Shock of Venom                     ;Direct Damage,Poison,Single
+strength46=        Strength                           ;Statistic Buffs,Strength,Single
+spirit46=          Harnessing of Spirit               ;HP Buffs,Shielding,Single
+dexterity48=       Dexterity                          ;Statistic Buffs,Dexterity,Single
+malosi48=          Malosi                             ;Utility Detrimental,Resist Debuffs,Single
+spirit49=          Infusion of Spirit                 ;HP Buffs,Strength,Single
+bolt49=            Envenomed Bolt                     ;Damage Over Time,Poison,Single
+plague49=          Plague                             ;Damage Over Time,Disease,Single
+salve50=           Kragg's Salve                      ;Heals,Heals,Single
+puma50=            Spirit of the Puma                 ;Utility Beneficial,Combat Innates,Single in Group
+quickening50=      Spirit Quickening                  ;Pet,Pet Haste,Pet
+jasinth50=         Talisman of Jasinth                ;Statistic Buffs,Resist Buff,Group v2
+insects51=         Turgur's Insects                   ;Utility Detrimental,Slow,Single
+scale52=           Spirit of Scale                    ;Utility Beneficial,Movement,Group v2
+regrowth52=        Regrowth                           ;Regen,Health,Single
