--- a/config/Bot_Pystoffe.ini
+++ b/config/Bot_Pystoffe.ini
@@ -1,7 +1,7 @@
 [State]
-Mode=3
+Mode=1
 Flags=PrintOff
-Tether=10641
+Tether=NONE
 
 [Default:CastQueue]
 Print=TRUE
@@ -16,11 +16,11 @@ OverrideSeconds=10
 
 [Default:Melee]
 Enabled=TRUE
-EngageTargetHPs=98
+EngageTargetHPs=99
 EngageTargetDistance=180
 
 [Default]
-SpellBar=1:s_mez,2:celerity36,3:soothing34,4:amplification30,5:rhythms17,6:dancing39,7:sustenance15,8:accelerando5
+SpellBar=1:s_mez,2:celerity36,3:soothing34,4:amplification30,5:rhythms17,6:dancing39,7:sustenance15,8:chorus49
 
 [Default:Buff]
 Enabled=FALSE
@@ -39,26 +39,26 @@ Spell=s_mez
 
 [Mode:2:Twist]
 Enabled=TRUE
-Order=accelerando5,soothing34,sustenance15 ; 8,3,7
-CombatOrder=amplification30,accelerando5,celerity36,soothing34,rhythms17,dancing39 ; 4,8,2,3,5,6
+Order=chorus49,soothing34,sustenance15 ; 8,3,7
+CombatOrder=amplification30,chorus49,celerity36,soothing34,rhythms17,dancing39 ; 4,8,2,3,5,6
 
 
-; [Mode:3]
-; SpellBar=
+[Mode:3]
+SpellBar=8:travel51
 
 [Mode:3:Twist]
 Enabled=TRUE
-Order=amplification30,accelerando5,soothing34,sustenance15 ; 8,3,7
-CombatOrder=accelerando5,rhythms17,dancing39 ; 4,8,2,3,5,6
+Order=travel51 ; 8,3,7
+CombatOrder=amplification30,celerity36,soothing34,rhythms17,dancing39 ; 4,8,2,3,5,6
 
 
 [Mode:4]
-SpellBar=8:chain23
+SpellBar=8:binding51
 
 [Mode:4:Twist]
 Enabled=TRUE
 Order=soothing34,sustenance15 ; 3,7
-CombatOrder=amplification30,chain23,celerity36,soothing34,chain23,rhythms17,dancing39 ; 4,8,2,3,8,5,6
+CombatOrder=amplification30,binding51,celerity36,soothing34,binding51,rhythms17,dancing39 ; 4,8,2,3,8,5,6
 
 
 [Flag:PrintOff:CastQueue]
@@ -70,25 +70,25 @@ Enabled=FALSE
 [Flag:ElementalProtection]
 SpellBar=5:rhythms9
 [Flag:2:Underwater:Twist]
-Order=accelerando5,restoration6,sustenance15 ; 8,2,7
+Order=chorus49,restoration6,sustenance15 ; 8,2,7
 CombatOrder=amplification30,celerity36,restoration6,rhythms9,dancing39 ; 4,1,2,3,5
 [Flag:3:Underwater:Twist]
-Order=accelerando5,restoration6,sustenance15 ; 8,2,7
+Order=chorus49,restoration6,sustenance15 ; 8,2,7
 CombatOrder=amplification30,celerity36,restoration6,rhythms9,dancing39 ; 4,1,2,3,5
 [Flag:4:Underwater:Twist]
-Order=accelerando5,restoration6,sustenance15 ; 8,2,7
+Order=chorus49,restoration6,sustenance15 ; 8,2,7
 CombatOrder=amplification30,celerity36,restoration6,rhythms9,dancing39 ; 4,1,2,3,5
 
 [Flag:DiseaseProtection]
 SpellBar=5:rhythms13
 [Flag:2:Underwater:Twist]
-Order=accelerando5,restoration6,sustenance15 ; 8,2,7
+Order=chorus49,restoration6,sustenance15 ; 8,2,7
 CombatOrder=amplification30,celerity36,restoration6,rhythms13,dancing39 ; 4,1,2,3,5
 [Flag:3:Underwater:Twist]
-Order=accelerando5,restoration6,sustenance15 ; 8,2,7
+Order=chorus49,restoration6,sustenance15 ; 8,2,7
 CombatOrder=amplification30,celerity36,restoration6,rhythms13,dancing39 ; 4,1,2,3,5
 [Flag:4:Underwater:Twist]
-Order=accelerando5,restoration6,sustenance15 ; 8,2,7
+Order=chorus49,restoration6,sustenance15 ; 8,2,7
 CombatOrder=amplification30,celerity36,restoration6,rhythms13,dancing39 ; 4,1,2,3,5
 
 [Flag:Underwater]
@@ -130,3 +130,23 @@ clarity32=         Cassindra's Chorus of Clarity      ;Regen,Mana,Group v2
 soothing34=        Cantata of Soothing                ;Regen,Health/Mana,Group v2
 celerity36=        Vilia's Verses of Celerity         ;Utility Beneficial,Haste,Group v2
 dancing39=         Katta's Song of Sword Dancing      ;Utility Beneficial,Combat Innates,Group v2
+dreams40=          Sionachie's Dreams                 ;Utility Detrimental,Enthrall,Single
+travel51=          Selo's Song of Travel              ;Utility Beneficial,Movement,Group v2
+chorus49=          Selo's Accelerating Chorus         ;Utility Beneficial,Movement,Group v2
+binding51=         Largo's Assonant Binding           ;Utility Detrimental,Slow,Single
+i_totem=           Item,Worn Totem,Blessing of Swiftness
+a_master182=       Alt,Summon Personal Tribute Master ;Summon Tribute Master,4
+a_enabled227=      Alt,Reaching Notes: Enabled        ;Disable Ability,5
+a_origin331=       Alt,Origin                         ;Origin,1
+a_peddler453=      Alt,Summon Permutation Peddler     ;Summon Distiller Vendor,4
+a_devoted481=      Alt,Lesson of the Devoted          ;Lesson of the Devoted,4
+a_faithful482=     Alt,Infusion of the Faithful       ;Infusion of the Faithful,4
+a_jester483=       Alt,Chaotic Jester                 ;Chaotic Jester,4
+a_recovery484=     Alt,Expedient Recovery             ;Expedient Recovery,4
+a_servant485=      Alt,Steadfast Servant              ;Steadfast Servant,4
+a_recovery486=     Alt,Staunch Recovery               ;Staunch Recovery,4
+a_resolute487=     Alt,Intensity of the Resolute      ;Intensity of the Resolute,4
+a_heroes511=       Alt,Throne of Heroes               ;Throne of Heroes,4
+a_experience2000=  Alt,Armor of Experience            ;Armor of Experience I,4
+a_agent8081=       Alt,Summon Resupply Agent          ;Summon Resupply Agent,4
+a_banker8130=      Alt,Summon Clockwork Banker        ;Summon Clockwork Banker,4
