--- a/config/Bot_Timmaayy.ini
+++ b/config/Bot_Timmaayy.ini
@@ -1,10 +1,10 @@
 [State]
-Mode=3
-Flags=PrintOff,DDOff,DotOff
+Mode=1
+Flags=BuffLowerManaLimit,DBManaDrainOn,DBSlowOn,DDMagicOn,DDStunOn
 Tether=NONE
 
 [Default:CastQueue]
-Print=TRUE
+Print=FALSE
 PrintTimer=10
 
 [Default:AutoSit]
@@ -29,22 +29,22 @@ Backoff=TRUE
 BackoffTimer=900
 
 [Default]
-SpellBar=1:s_mez,2:db_slow,3:db_disem,4:dot_mag,5:dd_stun,6:dd_mag,7:root6,8:OPEN
+SpellBar=1:s_mez,2:OPEN,3:OPEN,4:OPEN,5:OPEN,6:OPEN,7:OPEN,8:garou40
 
 [Default:DD]
-Enabled=TRUE
+Enabled=FALSE
 MinMana=60
 MinTargetHpPct=0
 Pcts=dd_stun:90,dd_mag:50
 
 [Default:Debuff]
-Enabled=TRUE
+Enabled=FALSE
 MinMana=50
 MinTargetHpPct=50
 Pcts=db_slow:100,db_disem:95
 
 [Default:Dot]
-Enabled=TRUE
+Enabled=FALSE
 MinMana=50
 MinTargetHpPct=50
 Pcts=dot_mag:95
@@ -61,12 +61,12 @@ MainTank=b_manaregen
 Caster=b_manaregen,b_mana,b_intwis
 Healer=b_manaregen,b_mana,b_intwis
 Pet=b_ac
-Self=b_selfhp,b_ac,ultravision27,b_mana,b_intwis
+Self=b_selfshield,b_ac,ultravision27,b_mana,b_intwis
 
 [Mode:3:Buff]
 MainTank=b_ac
 Pet=b_ac
-Self=b_selfhp,b_ac,ultravision27
+Self=b_selfshield,b_ac,ultravision27
 
 [Mode:4:Buff]
 MinMana=30
@@ -75,36 +75,93 @@ ShadowKnight=b_mana,b_intwis
 Caster=advancement11,b_manaregen,b_mana,b_intwis
 Healer=b_manaregen,b_mana,b_intwis
 Pet=b_ac,b_str
-Self=b_selfhp,b_ac,ultravision27,advancement11,b_mana,b_intwis,elemental33
+Self=b_selfshield,b_ac,ultravision27,advancement11,b_mana,b_intwis,elemental33,b_gres
 
 
-[Flag:PrintOff:CastQueue]
-Print=FALSE
+[Flag:PrintOn:CastQueue]
+Print=TRUE
 
-[Flag:DDOff:DD]
-Enabled=FALSE
+[Flag:SecondaryCC:CrowdControl]
+IAmPrimary=FALSE
 
-[Flag:DotOff:Dot]
-Enabled=FALSE
-
-[Flag:CancelMob]
-SpellBar=3:db_disp
-[Flag:CancelMob:Debuff]
+[Flag:DBDispelOn]
+SpellBar=O:db_disp
+[Flag:DBDispelOn:Debuff]
+Enabled=TRUE
 Pcts=+db_disp:100
+
+[Flag:DBResistOn]
+SpellBar=O:db_res
+[Flag:DBResistOn:Debuff]
+Enabled=TRUE
+Pcts=+db_res:98
+
+[Flag:DBDisempowerOn]
+SpellBar=O:db_disem
+[Flag:DBDisempowerOn:Debuff]
+Enabled=TRUE
+Pcts=+db_disem:95
+
+[Flag:DBSlowOn]
+SpellBar=O:db_slow
+[Flag:DBSlowOn:Debuff]
+Enabled=TRUE
+Pcts=+db_slow:99
+
+[Flag:DBManaDrainOn]
+SpellBar=O:s_manadrain
+[Flag:DBManaDrainOn:Debuff]
+Enabled=TRUE
+Pcts=+s_manadrain:80
+
+[Flag:DBManaTapOn]
+SpellBar=O:s_manatap
+[Flag:DBManaTabOn:Debuff]
+Enabled=TRUE
+Pcts=+s_manatap:70
+
+[Flag:DotMagicOn]
+SpellBar=O:dot_mag
+[Flag:DotMagicOn:Dot]
+Enabled=TRUE
+Pcts=+dot_mag:95
+
+[Flag:DDStunOn]
+SpellBar=O:dd_stun
+[Flag:DDMagicOn:DD]
+Enabled=TRUE
+Pcts=+dd_stun:90
+
+[Flag:DDMagicOn]
+SpellBar=O:dd_mag
+[Flag:DDMagicOn:DD]
+Enabled=TRUE
+Pcts=+dd_mag:50
+
+[Flag:Invisibility:Buff]
+Melee=+invisibility4
+Caster=+invisibility4
+Healer=+invisibility4
+
+[Flag:Levitate:Buff]
+Melee=+levitate15
+Caster=+levitate15
+Healer=+levitate15
+
+[Flag:WaterBreath:Buff]
+Melee=+eyes44
+Caster=+eyes44
+Healer=+eyes44
+
+[Flag:BuffLowerManaLimit:Buff]
+MinMana=30
 
 
 [Spells]
-b_selfhp=HP Buffs,Shielding,Self
-b_ac=Statistic Buffs,Armor Class,Single
-b_str=Statistic Buffs,Strength,Single
-b_mana=Statistic Buffs,Mana,Single
-b_manaregen=Regen,Mana,Single
-b_haste=Utility Beneficial,Haste,Single
-b_intwis=Statistic Buffs,Wisdom/Intelligence,Single
-
-db_slow=Utility Detrimental,Slow,Single
+db_res=Utility Detrimental,Resist Debuffs,Single
 db_disem=Utility Detrimental,Disempowering,Single
 db_disp=Utility Detrimental,Dispel,Single
+db_slow=Utility Detrimental,Slow,Single
 
 dot_mag=Damage Over Time,Magic,Single
 
@@ -113,6 +170,39 @@ dd_mag=Direct Damage,Magic,Single
 
 s_mez=Utility Detrimental,Enthrall,Single
 s_calm=Utility Detrimental,Calm,Single
+s_wipe=Utility Detrimental,Memory Blur,Single
+s_manadrain=Utility Detrimental,Mana Drain,Single
+s_manatap=Utility Detrimental,Mana Drain,LifeTap
+
+b_selfshield=HP Buffs,Shielding,Self
+b_ac=Statistic Buffs,Armor Class,Single
+b_mana=Statistic Buffs,Mana,Single
+b_groupmanaregen=Regen,Mana,Group v2
+b_grouphaste=Utility Beneficial,Haste,Group v2
+b_haste=Utility Beneficial,Haste,Single
+b_dsh=Utility Beneficial,Damage Shield,Single
+b_str=Statistic Buffs,Strength,Single
+b_manaregen=Regen,Mana,Single
+b_intwis=Statistic Buffs,Wisdom/Intelligence,Single
+b_gres=Statistic Buffs,Resist Buff,Group v2
+
+a_enabled25=       Alt,Spell Casting Subtlety: Enabled;Disable Ability,2
+a_master182=       Alt,Summon Personal Tribute Master ;Summon Tribute Master,4
+a_origin331=       Alt,Origin                         ;Origin,1
+a_peddler453=      Alt,Summon Permutation Peddler     ;Summon Distiller Vendor,4
+a_devoted481=      Alt,Lesson of the Devoted          ;Lesson of the Devoted,4
+a_faithful482=     Alt,Infusion of the Faithful       ;Infusion of the Faithful,4
+a_jester483=       Alt,Chaotic Jester                 ;Chaotic Jester,4
+a_recovery484=     Alt,Expedient Recovery             ;Expedient Recovery,4
+a_servant485=      Alt,Steadfast Servant              ;Steadfast Servant,4
+a_recovery486=     Alt,Staunch Recovery               ;Staunch Recovery,4
+a_resolute487=     Alt,Intensity of the Resolute      ;Intensity of the Resolute,4
+a_heroes511=       Alt,Throne of Heroes               ;Throne of Heroes,4
+a_experience2000=  Alt,Armor of Experience            ;Armor of Experience I,4
+a_agent8081=       Alt,Summon Resupply Agent          ;Summon Resupply Agent,4
+a_banker8130=      Alt,Summon Clockwork Banker        ;Summon Clockwork Banker,4
+
+i_totem=           Item,Worn Totem,Blessing of Swiftness
 
 lull1=             Lull                               ;Utility Detrimental,Calm,Single
 illusion1=         Minor Illusion                     ;Utility Beneficial,Illusion: Other,Self
@@ -185,3 +275,38 @@ shielding31=       Greater Shielding                  ;HP Buffs,Shielding,Self
 celerity39=        Celerity                           ;Utility Beneficial,Haste,Single
 shade37=           Shade                              ;Statistic Buffs,Armor Class,Single
 wipe36=            Mind Wipe                          ;Utility Detrimental,Memory Blur,Targeted AE
+eyes44=            Leviathan Eyes                     ;Utility Beneficial,Vision,Single
+mind43=            Discordant Mind                    ;Direct Damage,Magic,Single
+enchantment42=     Pillage Enchantment                ;Utility Detrimental,Dispel,Single
+weakness42=        Weakness                           ;Utility Detrimental,Disempowering,Single
+tashania41=        Tashania                           ;Utility Detrimental,Resist Debuffs,Single
+deeds41=           Shiftless Deeds                    ;Utility Detrimental,Slow,Single
+brilliance41=      Brilliance                         ;Statistic Buffs,Wisdom/Intelligence,Single
+shielding40=       Arch Shielding                     ;HP Buffs,Shielding,Self
+garou40=           Boon of the Garou                  ;Utility Beneficial,Combat Innates,Single in Group
+incapacitate40=    Incapacitate                       ;Utility Detrimental,Disempowering,Single
+wind47=            Swift Like the Wind                ;Utility Beneficial,Haste,Single
+dazzle47=          Dazzle                             ;Utility Detrimental,Enthrall,Single
+embrace47=         Gasping Embrace                    ;Damage Over Time,Magic,Single
+magic48=           Group Resist Magic                 ;Statistic Buffs,Resist Buff,Group v2
+shadow48=          Shadow                             ;Statistic Buffs,Armor Class,Single
+breath51=          Everlasting Breath                 ;Utility Beneficial,Misc,Single
+levitation51=      Levitation                         ;Utility Beneficial,Levitate,Single
+ii52=              Clarity II                         ;Regen,Mana,Single
+i_totem=           Item,Worn Totem,Blessing of Swiftness
+a_enabled25=       Alt,Spell Casting Subtlety: Enabled;Disable Ability,2
+a_master182=       Alt,Summon Personal Tribute Master ;Summon Tribute Master,4
+a_origin331=       Alt,Origin                         ;Origin,1
+a_peddler453=      Alt,Summon Permutation Peddler     ;Summon Distiller Vendor,4
+a_devoted481=      Alt,Lesson of the Devoted          ;Lesson of the Devoted,4
+a_faithful482=     Alt,Infusion of the Faithful       ;Infusion of the Faithful,4
+a_jester483=       Alt,Chaotic Jester                 ;Chaotic Jester,4
+a_recovery484=     Alt,Expedient Recovery             ;Expedient Recovery,4
+a_servant485=      Alt,Steadfast Servant              ;Steadfast Servant,4
+a_recovery486=     Alt,Staunch Recovery               ;Staunch Recovery,4
+a_resolute487=     Alt,Intensity of the Resolute      ;Intensity of the Resolute,4
+a_heroes511=       Alt,Throne of Heroes               ;Throne of Heroes,4
+a_experience2000=  Alt,Armor of Experience            ;Armor of Experience I,4
+a_agent8081=       Alt,Summon Resupply Agent          ;Summon Resupply Agent,4
+a_banker8130=      Alt,Summon Clockwork Banker        ;Summon Clockwork Banker,4
+trespass52=        Scryer's Trespass                  ;Utility Detrimental,Mana Drain,Single
