--- a/config/Bot_Vubelar.ini
+++ b/config/Bot_Vubelar.ini
@@ -1,10 +1,10 @@
 [State]
 Mode=1
-Flags=CC2,PrintOff
-Tether=21093
+Flags=DDFireOn,DDFireballOn,DDMagicOn,DotMagicOn
+Tether=10375
 
 [Default:CastQueue]
-Print=TRUE
+Print=FALSE
 PrintTimer=10
 
 [Default:AutoSit]
@@ -29,16 +29,16 @@ Backoff=TRUE
 BackoffTimer=300
 
 [Default]
-SpellBar=1:dot_mag,2:dd_pet,3:dd_mag,4:dd_fireb,5:dd_fire,6:OPEN,7:OPEN,8:OPEN,9:b_petblock
+SpellBar=1:OPEN,2:OPEN,3:OPEN,4:OPEN,5:OPEN,6:OPEN,7:OPEN,8:dd_fireb,9:b_petblock
 
 [Default:DD]
-Enabled=TRUE
+Enabled=FALSE
 MinMana=40
 MinTargetHpPct=0
 Pcts=dd_pet:99,dd_mag:65,dd_fire:50
 
 [Default:Dot]
-Enabled=TRUE
+Enabled=FALSE
 MinMana=50
 MinTargetHpPct=65
 Pcts=dot_mag:95
@@ -64,14 +64,44 @@ Self=b_groupdsh,b_selfregen,b_selfshield
 Selfpet=b_pethaste,b_petblock,b_petaura,velocity58
 
 
-[Flag:PrintOff:CastQueue]
-Print=FALSE
+[Flag:PrintOn:CastQueue]
+Print=TRUE
+
+[Flag:DotMagicOn]
+SpellBar=O:dot_mag
+[Flag:DotMagicOn:Dot]
+Enabled=TRUE
+Pcts=+dot_mag:95
+
+[Flag:DDSummonOn]
+SpellBar=O:dd_sum
+[Flag:DDSummonOn:DD]
+Enabled=TRUE
+Pcts=+dd_sum:99
+
+[Flag:DDMagicOn]
+SpellBar=O:dd_mag
+[Flag:DDMagicOn:DD]
+Enabled=TRUE
+Pcts=+dd_mag:65
+
+[Flag:DDFireOn]
+SpellBar=O:dd_fire
+[Flag:DDFireOn:DD]
+Enabled=TRUE
+Pcts=+dd_fire:50
+
+[Flag:DDFireballOn]
+;SpellBar=O:dd_fireb
+[Flag:DDFireballOn:DD]
+Enabled=TRUE
+Pcts=+dd_fireb:50
 
 
 [Spells]
 dot_mag=Damage Over Time,Magic,Single
 
-dd_pet=Pet,Sum: Swarm,Single
+dd_sum=Pet,Sum: Swarm,Single
 dd_fire=Direct Damage,Fire,Single
 dd_fireb=Direct Damage,Fire,Line of Sight
 dd_mag=Direct Damage,Magic,Single
@@ -84,6 +114,23 @@ b_pethaste=Pet,Pet Haste,Pet
 b_petblock=Pet,Block,Pet
 b_petaura=Pet Misc Buffs,Auras,Pet
 
+a_enabled25=       Alt,Spell Casting Subtlety: Enabled;Disable Ability,2
+a_master182=       Alt,Summon Personal Tribute Master ;Summon Tribute Master,4
+a_origin331=       Alt,Origin                         ;Origin,1
+a_peddler453=      Alt,Summon Permutation Peddler     ;Summon Distiller Vendor,4
+a_devoted481=      Alt,Lesson of the Devoted          ;Lesson of the Devoted,4
+a_faithful482=     Alt,Infusion of the Faithful       ;Infusion of the Faithful,4
+a_jester483=       Alt,Chaotic Jester                 ;Chaotic Jester,4
+a_recovery484=     Alt,Expedient Recovery             ;Expedient Recovery,4
+a_servant485=      Alt,Steadfast Servant              ;Steadfast Servant,4
+a_recovery486=     Alt,Staunch Recovery               ;Staunch Recovery,4
+a_resolute487=     Alt,Intensity of the Resolute      ;Intensity of the Resolute,4
+a_heroes511=       Alt,Throne of Heroes               ;Throne of Heroes,4
+a_experience2000=  Alt,Armor of Experience            ;Armor of Experience I,4
+a_agent8081=       Alt,Summon Resupply Agent          ;Summon Resupply Agent,4
+a_banker8130=      Alt,Summon Clockwork Banker        ;Summon Clockwork Banker,4
+
+i_totem=           Item,Worn Totem,Blessing of Swiftness
 
 flame1=            Burst of Flame                     ;Direct Damage,Fire,Single
 flux1=             Fire Flux                          ;Direct Damage,Fire,PB AE
