--- a/config/Bot_Weradan.ini
+++ b/config/Bot_Weradan.ini
@@ -1,10 +1,10 @@
 [State]
 Mode=1
-Flags=CC2,PrintOff
-Tether=21093
+Flags=
+Tether=10375
 
 [Default:CastQueue]
-Print=TRUE
+Print=FALSE
 PrintTimer=10
 
 [Default:Tether]
@@ -26,7 +26,7 @@ EngageTargetHPs=95
 EngageTargetDistance=75
 
 [Default]
-SpellBar=1:ayonae58,2:binding51,3:rondo57,4:shir60,5:shielding41,6:sustenance15,7:replenishment55,8:fire53,9:OPEN
+SpellBar=1:s_mez,2:db_slow,3:b_groupdsh,4:b_grouphaste,5:shielding41,6:sustenance15,7:b_groupregen,8:fire53,9:OPEN
 
 [Default:Buff]
 Enabled=TRUE
@@ -37,7 +37,7 @@ Self=insight55
 Enabled=TRUE
 IAmPrimary=FALSE
 MinMana=10
-Spell=ayonae58
+Spell=s_mez
 
 
 [Mode:2]
@@ -45,8 +45,8 @@ SpellBar=9:chorus49
 
 [Mode:2:Twist]
 Enabled=TRUE
-Order=chorus49,sustenance15,replenishment55 ; 9,6,7
-CombatOrder=binding51,rondo57,shir60,binding51,shielding41,fire53,replenishment55,sustenance15 ; 2,3,4,2,5,8,7,6
+Order=chorus49,sustenance15,b_groupregen ; 9,6,7
+CombatOrder=db_slow,b_groupdsh,b_grouphaste,db_slow,shielding41,fire53,b_groupregen,sustenance15 ; 2,3,4,2,5,8,7,6
 
 
 [Mode:3]
@@ -55,7 +55,7 @@ SpellBar=9:travel51
 [Mode:3:Twist]
 Enabled=TRUE
 Order=travel51 ; 9
-CombatOrder=binding51,rondo57,shir60,binding51,shielding41,fire53,replenishment55,sustenance15 ; 2,3,4,2,5,8,7,6
+CombatOrder=db_slow,b_groupdsh,b_grouphaste,db_slow,shielding41,fire53,b_groupregen,sustenance15 ; 2,3,4,2,5,8,7,6
 
 
 [Mode:4]
@@ -63,18 +63,47 @@ SpellBar=9:amplification30
 
 [Mode:4:Twist]
 Enabled=TRUE
-Order=amplification30,shielding41,replenishment55,sustenance15 ; 9,5,7,6
-CombatOrder=amplification30,binding51,rondo57,shir60,binding51,shielding41,fire53,replenishment55,sustenance15 ; 9,2,3,4,2,5,8,7,6
+Order=amplification30,shielding41,b_groupregen,sustenance15 ; 9,5,7,6
+CombatOrder=amplification30,db_slow,b_groupdsh,b_grouphaste,db_slow,shielding41,fire53,b_groupregen,sustenance15 ; 9,2,3,4,2,5,8,7,6
 
+
+[Flag:PrintOn:CastQueue]
+Print=TRUE
 
 [Flag:PrimaryCC:CrowdControl]
 IAmPrimary=TRUE
 
-[Flag:PrintOff:CastQueue]
-Print=FALSE
+[Flag:AutoMeleeOff:Melee]
+Enabled=FALSE
 
 
 [Spells]
+db_slow=Utility Detrimental,Slow,Single
+
+s_mez=Utility Detrimental,Enthrall,Single
+
+b_grouphaste=Utility Beneficial,Haste,Group v2
+b_groupdsh=Utility Beneficial,Damage Shield,Group v2
+b_groupregen=Regen,Health/Mana,Group v2
+
+a_master182=       Alt,Summon Personal Tribute Master ;Summon Tribute Master,4
+a_enabled227=      Alt,Reaching Notes: Enabled        ;Disable Ability,5
+a_origin331=       Alt,Origin                         ;Origin,1
+a_peddler453=      Alt,Summon Permutation Peddler     ;Summon Distiller Vendor,4
+a_devoted481=      Alt,Lesson of the Devoted          ;Lesson of the Devoted,4
+a_faithful482=     Alt,Infusion of the Faithful       ;Infusion of the Faithful,4
+a_jester483=       Alt,Chaotic Jester                 ;Chaotic Jester,4
+a_recovery484=     Alt,Expedient Recovery             ;Expedient Recovery,4
+a_servant485=      Alt,Steadfast Servant              ;Steadfast Servant,4
+a_recovery486=     Alt,Staunch Recovery               ;Staunch Recovery,4
+a_resolute487=     Alt,Intensity of the Resolute      ;Intensity of the Resolute,4
+a_heroes511=       Alt,Throne of Heroes               ;Throne of Heroes,4
+a_experience2000=  Alt,Armor of Experience            ;Armor of Experience I,4
+a_agent8081=       Alt,Summon Resupply Agent          ;Summon Resupply Agent,4
+a_banker8130=      Alt,Summon Clockwork Banker        ;Summon Clockwork Banker,4
+
+i_totem=           Item,Worn Totem,Blessing of Swiftness
+
 battle1=           Chant of Battle                    ;Statistic Buffs,Armor Class,Group v2
 dissonance2=       Chords of Dissonance               ;Damage Over Time,Magic,PB AE
 lyric4=            Lyssa's Locating Lyric             ;Utility Beneficial,Misc,Self
