--- a/config/Bot_Whatapal.ini
+++ b/config/Bot_Whatapal.ini
@@ -29,7 +29,7 @@ BackoffTimer=300
 OnPullStart=
 OnPullEnd=
 OnPreEngage=
-OnEngage=/dbcq queue -spell|Statistic Buffs,Attack,Self -priority|49 -max_tries|3 -unique|true
+OnEngage=/drive cast -spell|Statistic Buffs,Attack,Self -priority|49 -max_tries|3 -unique|true
 
 
 [Default]
