--- a/config/Bot_Xamox.ini
+++ b/config/Bot_Xamox.ini
@@ -38,7 +38,7 @@ BackoffTimer=300
 
 
 [Default]
-SpellBar=1:h_lifetap,2:aggro,3:OPEN,4:hate54,5:dot_snare,6:dot_dis,7:dd_disease,8:b_aggro,9:OPEN
+SpellBar=1:h_lifetap,2:s_aggro,3:OPEN,4:hate54,5:dot_snare,6:dot_dis,7:dd_dis,8:b_aggro,9:OPEN
 
 [Default:Heal]
 Enabled=TRUE
@@ -49,7 +49,7 @@ Self=h_lifetap:90
 Enabled=FALSE
 MinMana=30
 MinTargetHpPct=0
-Pcts=aggro:100,dd_disease:95
+Pcts=s_aggro:100,dd_dis:95
 
 [Default:Dot]
 Enabled=TRUE
@@ -78,14 +78,40 @@ Self=+darkness54
 
 
 [Spells]
-dd_disease=Direct Damage,Disease,Single
-aggro=Utility Detrimental,Jolt,Single
 h_lifetap=Taps,Health,LifeTap
+h_lifetapot=Taps,Duration Tap,Single
+
 dot_snare=Damage Over Time,Snare,Single
 dot_dis=Damage Over Time,Disease,Single
+
+dd_dis=Direct Damage,Disease,Single
+
+s_aggro=Utility Detrimental,Jolt,Single
+
 b_pethaste=Pet,Pet Haste,Pet
 b_selfshield=HP Buffs,Shielding,Self
 b_aggro=Utility Beneficial,Visages,Single
+
+a_master182=       Alt,Summon Personal Tribute Master ;Summon Tribute Master,4
+a_origin331=       Alt,Origin                         ;Origin,1
+a_peddler453=      Alt,Summon Permutation Peddler     ;Summon Distiller Vendor,4
+a_devoted481=      Alt,Lesson of the Devoted          ;Lesson of the Devoted,4
+a_faithful482=     Alt,Infusion of the Faithful       ;Infusion of the Faithful,4
+a_jester483=       Alt,Chaotic Jester                 ;Chaotic Jester,4
+a_recovery484=     Alt,Expedient Recovery             ;Expedient Recovery,4
+a_servant485=      Alt,Steadfast Servant              ;Steadfast Servant,4
+a_recovery486=     Alt,Staunch Recovery               ;Staunch Recovery,4
+a_resolute487=     Alt,Intensity of the Resolute      ;Intensity of the Resolute,4
+a_heroes511=       Alt,Throne of Heroes               ;Throne of Heroes,4
+a_enabled1278=     Alt,Soul Flay: Enabled             ;Disable Ability,3
+a_experience2000=  Alt,Armor of Experience            ;Armor of Experience I,4
+a_touch6000=       Alt,Harm Touch                     ;Harm Touch X,3
+a_agent8081=       Alt,Summon Resupply Agent          ;Summon Resupply Agent,4
+a_banker8130=      Alt,Summon Clockwork Banker        ;Summon Clockwork Banker,4
+
+i_jungle=          Item,Familiar of the Emerald Jungle,Summon Familiar: Emerald Sokokar
+i_totem=           Item,Worn Totem,Blessing of Swiftness
+i_calling=         Item,Sceptre of Draconic Calling,Portal of Crescent Reach
 
 disease1=          Spike of Disease                   ;Direct Damage,Disease,Single
 dead2=             Sense the Dead                     ;Utility Beneficial,Misc,Self
@@ -189,3 +215,5 @@ innoruuk65=        Touch of Innoruuk                  ;Taps,Health,LifeTap
 luclin65=          Cloak of Luclin                    ;HP Buffs,Shielding,Self
 thule65=           Voice of Thule                     ;Utility Beneficial,Visages,Single
 spear65=           Miasmic Spear                      ;Direct Damage,Disease,Single
+constriction66=    Dark Constriction                  ;Damage Over Time,Disease,Single
+inruku66=          Bond of Inruku                     ;Taps,Duration Tap,Single
