--- a/config/Bot_Yaladil.ini
+++ b/config/Bot_Yaladil.ini
@@ -1,10 +1,10 @@
 [State]
 Mode=1
-Flags=CC2,PrintOff
-Tether=21093
+Flags=DBResistOn,DBSlowOn,DDMagicOn,DotMagicOn
+Tether=10375
 
 [Default:CastQueue]
-Print=TRUE
+Print=FALSE
 PrintTimer=10
 
 [Default:AutoSit]
@@ -29,22 +29,22 @@ Backoff=TRUE
 BackoffTimer=300
 
 [Default]
-SpellBar=1:apathy61,2:db_res,3:db_disem,4:dot_mag,5:dd_mag,6:thought50,7:OPEN,8:s_wipe,9:garou40
+SpellBar=1:apathy61,2:OPEN,3:OPEN,4:OPEN,5:OPEN,6:OPEN,7:OPEN,8:s_wipe,9:garou40
 
 [Default:DD]
-Enabled=TRUE
+Enabled=FALSE
 MinMana=30
 MinTargetHpPct=0
 Pcts=thought50:60,dd_mag:50
 
 [Default:Debuff]
-Enabled=TRUE
+Enabled=FALSE
 MinMana=45
 MinTargetHpPct=65
 Pcts=db_res:99,db_disem:90
 
 [Default:Dot]
-Enabled=TRUE
+Enabled=FALSE
 MinMana=20
 MinTargetHpPct=65
 Pcts=dot_mag:85
@@ -60,9 +60,7 @@ Spell=apathy61
 Self=b_groupmanaregen,aura55,b_selfshield
 
 [Mode:3:Buff]
-;Melee=levitate15,invisibility4
-;Caster=levitate15,invisibility4
-;Healer=levitate15,invisibility4
+Self=b_groupmanaregen,aura55,b_selfshield
 
 [Mode:4:Buff]
 ;MainTank=
@@ -71,31 +69,102 @@ Pet=b_haste
 Self=b_groupmanaregen,b_grouphaste,elemental33,aura55,b_ac,b_selfshield
 Selfpet=garou40,b_haste
 
-[Flag:4:BuffedMobs]
-SpellBar=3:magic53
-[Flag:4:BuffedMobs:Debuff]
-Pcts=magic53:100,db_res:97
 
-[Flag:4:CC2]
-SpellBar=1:apathy61
-[Flag:4:CC2:CrowdControl]
-Spell=apathy61
-
+[Flag:PrintOn:CastQueue]
+Print=TRUE
 
 [Flag:SecondaryCC:CrowdControl]
 IAmPrimary=FALSE
 
-[Flag:PrintOff:CastQueue]
-Print=FALSE
+[Flag:DBDispelOn]
+SpellBar=O:db_disp
+[Flag:DBDispelOn:Debuff]
+Enabled=TRUE
+Pcts=+db_disp:100
+
+[Flag:DBResistOn]
+SpellBar=O:db_res
+[Flag:DBResistOn:Debuff]
+Enabled=TRUE
+Pcts=+db_res:98
+
+[Flag:DBDisempowerOn]
+SpellBar=O:db_disem
+[Flag:DBDisempowerOn:Debuff]
+Enabled=TRUE
+Pcts=+db_disem:95
+
+[Flag:DBSlowOn]
+SpellBar=O:db_slow
+[Flag:DBSlowOn:Debuff]
+Enabled=TRUE
+Pcts=+db_slow:99
+
+[Flag:DBManaDrainOn]
+SpellBar=O:db_manadrain
+[Flag:DBManaDrainOn:Debuff]
+Enabled=TRUE
+Pcts=+s_manadrain:80
+
+[Flag:DBManaTapOn]
+SpellBar=O:s_manatap
+[Flag:DBManaTabOn:Debuff]
+Enabled=TRUE
+Pcts=+s_manatap:70
+
+[Flag:DotMagicOn]
+SpellBar=O:dot_mag
+[Flag:DotMagicOn:Dot]
+Enabled=TRUE
+Pcts=+dot_mag:85
+
+[Flag:DDStunOn]
+SpellBar=O:dd_stun
+[Flag:DDMagicOn:DD]
+Enabled=TRUE
+Pcts=+dd_stun:90
+
+[Flag:DDMagicOn]
+SpellBar=O:dd_mag
+[Flag:DDMagicOn:DD]
+Enabled=TRUE
+Pcts=+dd_mag:50
+
+[Flag:Invisibility:Buff]
+Melee=+invisibility4
+Caster=+invisibility4
+Healer=+invisibility4
+
+[Flag:Levitate:Buff]
+Melee=+levitate15
+Caster=+levitate15
+Healer=+levitate15
+
+[Flag:WaterBreath:Buff]
+Melee=+eyes44
+Caster=+eyes44
+Healer=+eyes44
+
+[Flag:BuffLowerManaLimit:Buff]
+MinMana=30
 
 
 [Spells]
-dot_mag=Damage Over Time,Magic,Single
-dd_mag=Direct Damage,Magic,Single
-
 db_res=Utility Detrimental,Resist Debuffs,Single
 db_disem=Utility Detrimental,Disempowering,Single
-db_manadrain=Utility Detrimental,Mana Drain,Single
+db_disp=Utility Detrimental,Dispel,Single
+db_slow=Utility Detrimental,Slow,Single
+
+dot_mag=Damage Over Time,Magic,Single
+
+dd_stun=Direct Damage,Stun,Single
+dd_mag=Direct Damage,Magic,Single
+
+s_mez=Utility Detrimental,Enthrall,Single
+s_calm=Utility Detrimental,Calm,Single
+s_wipe=Utility Detrimental,Memory Blur,Single
+s_manadrain=Utility Detrimental,Mana Drain,Single
+s_manatap=Utility Detrimental,Mana Drain,LifeTap
 
 b_selfshield=HP Buffs,Shielding,Self
 b_ac=Statistic Buffs,Armor Class,Single
@@ -104,8 +173,28 @@ b_groupmanaregen=Regen,Mana,Group v2
 b_grouphaste=Utility Beneficial,Haste,Group v2
 b_haste=Utility Beneficial,Haste,Single
 b_dsh=Utility Beneficial,Damage Shield,Single
+b_str=Statistic Buffs,Strength,Single
+b_manaregen=Regen,Mana,Single
+b_intwis=Statistic Buffs,Wisdom/Intelligence,Single
+b_gres=Statistic Buffs,Resist Buff,Group v2
 
-s_wipe=Utility Detrimental,Memory Blur,Single
+a_enabled25=       Alt,Spell Casting Subtlety: Enabled;Disable Ability,2
+a_master182=       Alt,Summon Personal Tribute Master ;Summon Tribute Master,4
+a_origin331=       Alt,Origin                         ;Origin,1
+a_peddler453=      Alt,Summon Permutation Peddler     ;Summon Distiller Vendor,4
+a_devoted481=      Alt,Lesson of the Devoted          ;Lesson of the Devoted,4
+a_faithful482=     Alt,Infusion of the Faithful       ;Infusion of the Faithful,4
+a_jester483=       Alt,Chaotic Jester                 ;Chaotic Jester,4
+a_recovery484=     Alt,Expedient Recovery             ;Expedient Recovery,4
+a_servant485=      Alt,Steadfast Servant              ;Steadfast Servant,4
+a_recovery486=     Alt,Staunch Recovery               ;Staunch Recovery,4
+a_resolute487=     Alt,Intensity of the Resolute      ;Intensity of the Resolute,4
+a_heroes511=       Alt,Throne of Heroes               ;Throne of Heroes,4
+a_experience2000=  Alt,Armor of Experience            ;Armor of Experience I,4
+a_agent8081=       Alt,Summon Resupply Agent          ;Summon Resupply Agent,4
+a_banker8130=      Alt,Summon Clockwork Banker        ;Summon Clockwork Banker,4
+
+i_totem=           Item,Worn Totem,Blessing of Swiftness
 
 lull1=             Lull                               ;Utility Detrimental,Calm,Single
 illusion1=         Minor Illusion                     ;Utility Beneficial,Illusion: Other,Self
