--- a/config/Bot_Zasratas.ini
+++ b/config/Bot_Zasratas.ini
@@ -1,10 +1,10 @@
 [State]
 Mode=1
-Flags=CC2,PrintOff
-Tether=21093
+Flags=CombatBuffsOn,DBResistOn,DBSlowOn,DotMagicOn,PrintOff
+Tether=10375
 
 [Default:CastQueue]
-Print=TRUE
+Print=FALSE
 PrintTimer=10
 
 [Default:AutoSit]
@@ -31,21 +31,21 @@ BackoffTimer=300
 [Default:TeamEvents]
 OnPullStart=
 OnPullEnd=
-OnPreEngage=/drive cast -spell|malo55 -priority|39
-OnEngage=/drive cast -spell|jaguar57 -priority|49 -target|Group.MainTank.ID -max_tries|3 -unique|true
+OnPreEngage=
+;OnEngage=/drive cast -spell|bc_attack -priority|49 -target|Group.MainTank.ID -max_tries|3 -unique|true
 
 [Default]
-SpellBar=1:chloroblast55,2:dot_poi,3:dot_dis,4:dot_mag,5:jaguar57,6:torpor60,7:OPEN,8:insects51,9:malo55
+SpellBar=1:h_single,2:h_ot,3:OPEN,4:OPEN,5:OPEN,6:OPEN,7:OPEN,8:OPEN,9:OPEN
 
 [Default:Heal]
 Enabled=TRUE
 MinMana=0
-Tank=chloroblast55:70
-Melee=chloroblast55:65
-Caster=chloroblast55:65
-Pet=chloroblast55:35
-Self=chloroblast55:65
-Selfpet=chloroblast55:35
+Tank=h_single:70
+Melee=h_single:65
+Caster=h_single:65
+Pet=h_single:40
+Self=h_single:65
+Selfpet=h_single:40
 
 [Default:DD]
 Enabled=FALSE
@@ -54,13 +54,13 @@ MinTargetHpPct=0
 Pcts=dd_cold:50,dd_poi:50,dd_fire:50
 
 [Default:Debuff]
-Enabled=TRUE
+Enabled=FALSE
 MinMana=50
 MinTargetHpPct=65
 Pcts=insects51:100
 
 [Default:Dot]
-Enabled=TRUE
+Enabled=FALSE
 MinMana=60
 MinTargetHpPct=65
 Pcts=dot_dis:100,dot_poi:94,dot_mag:89
@@ -70,9 +70,7 @@ Pcts=dot_dis:100,dot_poi:94,dot_mag:89
 Self=b_groupstr,b_groupvis
 
 [Mode:3:Buff]
-;Melee=wolf9
-;Caster=wolf9
-;Healer=wolf9
+Self=b_groupstr,b_groupvis
 
 [Mode:4:Buff]
 MinMana=50
@@ -84,37 +82,83 @@ Self=b_selfbear,b_regen,bihli36,jasinth50,shadoo53,b_groupsta,b_groupagi,b_group
 Selfpet=quickening50,b_dex
 
 
-[Flag:4:PoisonOverMagic]
-SpellBar=4:dd_poi
-[Flag:4:PoisonOverMagic:DD]
+[Flag:PrintOn:CastQueue]
+Print=TRUE
+
+[Flag:DBSlowOn]
+SpellBar=O:db_slow
+[Flag:DBSlowOn:Debuff]
 Enabled=TRUE
-Pcts=dd_poi:50
-[Flag:4:PoisonOverMagic:Dot]
-Pcts=dot_dis:100,dot_poi:94
+Pcts=+db_slow:100
 
-[Flag:4:WeakSauce:Debuff]
-MinMana=75
-[Flag:4:WeakSauce:Dot]
-MinMana=75
+[Flag:DBDisempowerOn]
+SpellBar=O:db_disem
+[Flag:DBDisempowerOn:Debuff]
+Enabled=TRUE
+Pcts=+db_disem:95
 
+[Flag:DBResistOn]
+SpellBar=O:malo55
+[Flag:DBResistOn:TeamEvents]
+OnPreEngage=/drive cast -spell|malo55 -priority|39
 
-[Flag:PrintOff:CastQueue]
-Print=FALSE
+[Flag:DotMagicOn]
+SpellBar=O:dot_mag
+[Flag:DotMagicOn:Dot]
+Enabled=TRUE
+Pcts=+dot_mag:90
+
+[Flag:DotPoisonOn]
+SpellBar=O:dot_poi
+[Flag:DotPoisonOn:Dot]
+Enabled=TRUE
+Pcts=+dot_poi:95
+
+[Flag:DotDiseaseOn]
+SpellBar=O:dot_dis
+[Flag:DotDiseaseOn:Dot]
+Enabled=TRUE
+Pcts=+dot_dis:100
+
+[Flag:DDPoisonOn]
+SpellBar=O:dd_poi
+[Flag:DDPoisonOn:DD]
+Enabled=TRUE
+Pcts=+dd_poi:55
+
+[Flag:DDColdOn]
+SpellBar=O:dd_cold
+[Flag:DDColdOn:DD]
+Enabled=TRUE
+Pcts=+dd_cold:45
+
+[Flag:CombatBuffsOn]
+SpellBar=O:bc_attack
+[Flag:CombatBuffsOn:CombatBuff]
+Enabled=TRUE
+MainTank=bc_attack
+
+[Flag:Speed:Buff]
+Melee=+wolf9
+Caster=+wolf9
+Healer=+wolf9
 
 
 [Spells]
-h_single=Heals,Heals,Single,2
-
-dd_cold=Direct Damage,Cold,Single
-dd_poi=Direct Damage,Poison,Single
-dd_fire=Direct Damage,Fire,Single
+h_single=Heals,Heals,Single
+h_ot=Heals,Duration Heals,Single
 
 db_slow=Utility Detrimental,Slow,Single
 db_res=Utility Detrimental,Resist Debuffs,Single
+db_disem=Utility Detrimental,Disempowering,Single
 
 dot_poi=Damage Over Time,Poison,Single
 dot_dis=Damage Over Time,Disease,Single
 dot_mag=Damage Over Time,Magic,Single
+
+dd_cold=Direct Damage,Cold,Single
+dd_poi=Direct Damage,Poison,Single
+dd_fire=Direct Damage,Fire,Single
 
 b_shield=HP Buffs,Shielding,Single
 b_regen=Regen,Health,Single
@@ -128,6 +172,26 @@ b_groupdex=Statistic Buffs,Dexterity,Group v2
 b_groupagi=Statistic Buffs,Agility,Group v2
 b_groupstr=Statistic Buffs,Strength,Group v2
 b_groupvis=Utility Beneficial,Vision,Group v2
+
+bc_attack=Utility Beneficial,Combat Innates,Single in Group
+
+a_master182=       Alt,Summon Personal Tribute Master ;Summon Tribute Master,4
+a_enabled252=      Alt,Spell Casting Subtlety: Enabled;Disable Ability,2
+a_origin331=       Alt,Origin                         ;Origin,1
+a_peddler453=      Alt,Summon Permutation Peddler     ;Summon Distiller Vendor,4
+a_devoted481=      Alt,Lesson of the Devoted          ;Lesson of the Devoted,4
+a_faithful482=     Alt,Infusion of the Faithful       ;Infusion of the Faithful,4
+a_jester483=       Alt,Chaotic Jester                 ;Chaotic Jester,4
+a_recovery484=     Alt,Expedient Recovery             ;Expedient Recovery,4
+a_servant485=      Alt,Steadfast Servant              ;Steadfast Servant,4
+a_recovery486=     Alt,Staunch Recovery               ;Staunch Recovery,4
+a_resolute487=     Alt,Intensity of the Resolute      ;Intensity of the Resolute,4
+a_heroes511=       Alt,Throne of Heroes               ;Throne of Heroes,4
+a_experience2000=  Alt,Armor of Experience            ;Armor of Experience I,4
+a_agent8081=       Alt,Summon Resupply Agent          ;Summon Resupply Agent,4
+a_banker8130=      Alt,Summon Clockwork Banker        ;Summon Clockwork Banker,4
+
+i_totem=           Item,Worn Totem,Blessing of Swiftness
 
 flame1=            Burst of Flame                     ;Direct Damage,Fire,Single
 disease1=          Cure Disease                       ;Heals,Cure,Single
@@ -309,3 +373,6 @@ avatar60=          Primal Avatar                      ;Statistic Buffs,Attack,Si
 replenishment61=   Replenishment                      ;Regen,Health,Single
 spirit61=          True Spirit                        ;Pet,Sum: Warder,Self
 anew59=            Incarnate Anew                     ;Heals,Resurrection,Corpse
+mending65=         Daluda's Mending                   ;Heals,Heals,Single
+nihil65=           Balance of the Nihil               ;Utility Detrimental,Slow,Single
+quiescence65=      Quiescence                         ;Heals,Duration Heals,Single
