--- a/config/Bot_Weradan.ini
+++ b/config/Bot_Weradan.ini
@@ -1,177 +1,150 @@
 [State]
 Mode=1
 Flags=
-Tether=10375
-
+Tether=29437
 [Default:CastQueue]
 Print=FALSE
 PrintTimer=10
-
 [Default:Tether]
 Mode=ACTIVE
 CampMaxDistance=30
 FollowMaxDistance=15
 ReturnTimer=5
-
 [Default:AutoSit]
 Enabled=FALSE
 MinHPs=95
 MinMana=95
 OverrideOnMove=FALSE
 OverrideSeconds=10
-
 [Default:Melee]
 Enabled=TRUE
-EngageTargetHPs=95
-EngageTargetDistance=75
-
+EngageTargetHPs=98
+EngageTargetDistance=95
 [Default]
 SpellBar=1:s_mez,2:db_slow,3:b_groupdsh,4:b_grouphaste,5:shielding41,6:sustenance15,7:b_groupregen,8:fire53,9:OPEN
-
 [Default:Buff]
 Enabled=TRUE
 MinMana=0
 Self=insight55
-
 [Default:CrowdControl]
 Enabled=TRUE
 IAmPrimary=FALSE
 MinMana=10
 Spell=s_mez
-
-
 [Mode:2]
 SpellBar=9:chorus49
-
 [Mode:2:Twist]
 Enabled=TRUE
 Order=chorus49,sustenance15,b_groupregen ; 9,6,7
 CombatOrder=db_slow,b_groupdsh,b_grouphaste,db_slow,shielding41,fire53,b_groupregen,sustenance15 ; 2,3,4,2,5,8,7,6
-
-
 [Mode:3]
 SpellBar=9:travel51
-
 [Mode:3:Twist]
 Enabled=TRUE
 Order=travel51 ; 9
 CombatOrder=db_slow,b_groupdsh,b_grouphaste,db_slow,shielding41,fire53,b_groupregen,sustenance15 ; 2,3,4,2,5,8,7,6
-
-
 [Mode:4]
 SpellBar=9:amplification30
-
 [Mode:4:Twist]
 Enabled=TRUE
 Order=amplification30,shielding41,b_groupregen,sustenance15 ; 9,5,7,6
 CombatOrder=amplification30,db_slow,b_groupdsh,b_grouphaste,db_slow,shielding41,fire53,b_groupregen,sustenance15 ; 9,2,3,4,2,5,8,7,6
-
-
 [Flag:PrintOn:CastQueue]
 Print=TRUE
-
 [Flag:PrimaryCC:CrowdControl]
 IAmPrimary=TRUE
-
 [Flag:AutoMeleeOff:Melee]
 Enabled=FALSE
-
-
 [Spells]
 db_slow=Utility Detrimental,Slow,Single
-
 s_mez=Utility Detrimental,Enthrall,Single
-
 b_grouphaste=Utility Beneficial,Haste,Group v2
 b_groupdsh=Utility Beneficial,Damage Shield,Group v2
 b_groupregen=Regen,Health/Mana,Group v2
-
-a_master182=       Alt,Summon Personal Tribute Master ;Summon Tribute Master,4
-a_enabled227=      Alt,Reaching Notes: Enabled        ;Disable Ability,5
-a_origin331=       Alt,Origin                         ;Origin,1
-a_peddler453=      Alt,Summon Permutation Peddler     ;Summon Distiller Vendor,4
-a_devoted481=      Alt,Lesson of the Devoted          ;Lesson of the Devoted,4
-a_faithful482=     Alt,Infusion of the Faithful       ;Infusion of the Faithful,4
-a_jester483=       Alt,Chaotic Jester                 ;Chaotic Jester,4
-a_recovery484=     Alt,Expedient Recovery             ;Expedient Recovery,4
-a_servant485=      Alt,Steadfast Servant              ;Steadfast Servant,4
-a_recovery486=     Alt,Staunch Recovery               ;Staunch Recovery,4
-a_resolute487=     Alt,Intensity of the Resolute      ;Intensity of the Resolute,4
-a_heroes511=       Alt,Throne of Heroes               ;Throne of Heroes,4
-a_experience2000=  Alt,Armor of Experience            ;Armor of Experience I,4
-a_agent8081=       Alt,Summon Resupply Agent          ;Summon Resupply Agent,4
-a_banker8130=      Alt,Summon Clockwork Banker        ;Summon Clockwork Banker,4
-
-i_totem=           Item,Worn Totem,Blessing of Swiftness
-
-battle1=           Chant of Battle                    ;Statistic Buffs,Armor Class,Group v2
-dissonance2=       Chords of Dissonance               ;Damage Over Time,Magic,PB AE
-lyric4=            Lyssa's Locating Lyric             ;Utility Beneficial,Misc,Self
-accelerando5=      Selo's Accelerando                 ;Utility Beneficial,Movement,Group v2
-restoration6=      Hymn of Restoration                ;Regen,Health,Group v2
-warsong7=          Jonthan's Whistling Warsong        ;Utility Beneficial,Haste,Self
-lament8=           Kelin's Lugubrious Lament          ;Utility Detrimental,Calm,Single
-rhythms9=          Elemental Rhythms                  ;Statistic Buffs,Resist Buff,Group v2
-monologue9=        Magical Monologue                  ;Utility Beneficial,Misc,Self
-arms10=            Anthem de Arms                     ;Utility Beneficial,Haste,Group v2
-carillon11=        Cinda's Charismatic Carillon       ;Utility Beneficial,Alliance,Single
-bellow12=          Brusco's Boastful Bellow           ;Direct Damage,Magic,Single
-rhythms13=         Purifying Rhythms                  ;Statistic Buffs,Resist Buff,Group v2
-libretto14=        Lyssa's Cataloging Libretto        ;Utility Beneficial,Misc,Single
-lullaby15=         Kelin's Lucid Lullaby              ;Utility Detrimental,Enthrall,Single
-sustenance15=      Song of Sustenance                 ;Utility Beneficial,Misc,Group v2
-ayre16=            Tarew's Aquatic Ayre               ;Utility Beneficial,Misc,Group v2
-rhythms17=         Guardian Rhythms                   ;Statistic Buffs,Resist Buff,Group v2
-discord18=         Denon's Disruptive Discord         ;Damage Over Time,Magic,PB AE
-clouding19=        Shauri's Sonorous Clouding         ;Utility Beneficial,Invisibility,Group v2
-clarity20=         Cassindra's Chant of Clarity       ;Regen,Mana,Group v2
-binding20=         Largo's Melodic Binding            ;Utility Detrimental,Slow,PB AE
-motion21=          Melanie's Mellifluous Motion       ;Utility Beneficial,Shadowstep,Group v2
-melody22=          Alenia's Disenchanting Melody      ;Utility Detrimental,Dispel,Group v2
-chain23=           Selo's Consonant Chain             ;Utility Detrimental,Slow,Single
-concord24=         Lyssa's Veracious Concord          ;Utility Beneficial,Vision,Group v2
-warmth25=          Psalm of Warmth                    ;Utility Beneficial,Damage Shield,Group v2
-speed25=           Selo's Rhythm of Speed             ;Utility Beneficial,Movement,Group v2
-screech26=         Angstlich's Appalling Screech      ;Utility Detrimental,Fear,PB AE
-sirens27=          Solon's Song of the Sirens         ;Utility Detrimental,Charm,Single
-strike28=          Crission's Pixie Strike            ;Utility Detrimental,Enthrall,Single
-vitality29=        Psalm of Vitality                  ;Utility Beneficial,Damage Shield,Group v2
-amplification30=   Amplification                      ;Utility Beneficial,Misc,Self
-chant30=           Fufil's Curtailing Chant           ;Damage Over Time,Magic,Single
-eagles31=          Agilmente's Aria of Eagles         ;Utility Beneficial,Levitate,Group v2
-clarity32=         Cassindra's Chorus of Clarity      ;Regen,Mana,Group v2
-cooling33=         Psalm of Cooling                   ;Utility Beneficial,Damage Shield,Group v2
-soothing34=        Cantata of Soothing                ;Regen,Health/Mana,Group v2
-vision34=          Lyssa's Solidarity of Vision       ;Utility Beneficial,Vision,Single
-dissension35=      Denon's Dissension                 ;Utility Detrimental,Mana Drain,PB AE
-celerity36=        Vilia's Verses of Celerity         ;Utility Beneficial,Haste,Group v2
-purity37=          Psalm of Purity                    ;Utility Beneficial,Damage Shield,Group v2
-flame38=           Tuyen's Chant of Flame             ;Damage Over Time,Fire,Single
-dancing39=         Katta's Song of Sword Dancing      ;Utility Beneficial,Combat Innates,Group v2
-bravura39=         Solon's Bewitching Bravura         ;Utility Detrimental,Charm,Single
-dreams40=          Sionachie's Dreams                 ;Utility Detrimental,Enthrall,Single
-shielding41=       Psalm of Mystic Shielding          ;Statistic Buffs,Resist Buff,Group v2
-crescendo42=       McVaxius' Berserker Crescendo      ;Utility Beneficial,Haste,Group v2
-dirge43=           Denon's Desperate Dirge            ;Direct Damage,Magic,Targeted AE
-elegy44=           Cassindra's Elegy                  ;Statistic Buffs,Wisdom/Intelligence,Group v2
-provocation45=     Jonthan's Provocation              ;Utility Beneficial,Haste,Self
-preservation47=    Niv's Melody of Preservation       ;Utility Beneficial,Misc,Group v2
-chorus49=          Selo's Accelerating Chorus         ;Utility Beneficial,Movement,Group v2
-songs49=           Shield of Songs                    ;Utility Beneficial,Rune,Group v2
-ervaj50=           Melody of Ervaj                    ;Utility Beneficial,Haste,Group v2
-victory50=         Verses of Victory                  ;Utility Beneficial,Haste,Group v2
-binding51=         Largo's Assonant Binding           ;Utility Detrimental,Slow,Single
-travel51=          Selo's Song of Travel              ;Utility Beneficial,Movement,Group v2
-shir52=            Battlecry of the Vah Shir          ;Utility Beneficial,Haste,Group v2
-wee52=             Nillipus' March of the Wee         ;Utility Beneficial,Rune,Group v2
-fire53=            Rizlona's Fire                     ;Utility Beneficial,Spell Focus,Group v1
-twilight53=        Song of Twilight                   ;Utility Detrimental,Enthrall,Single
-strain54=          Selo's Assonant Strain             ;Utility Detrimental,Slow,PB AE
-celerity54=        Vilia's Chorus of Celerity         ;Utility Beneficial,Haste,Group v2
-insight55=         Aura of Insight                    ;Auras,Haste/Spell Focus,Self
-replenishment55=   Cantata of Replenishment           ;Regen,Health/Mana,Group v2
-ayonae58=          Dreams of Ayonae                   ;Utility Detrimental,Enthrall,Single
-inspiration58=     Jonthan's Inspiration              ;Utility Beneficial,Haste,Self
-shir60=            Warsong of the Vah Shir            ;Utility Beneficial,Haste,Group v2
-rondo57=           McVaxius' Rousing Rondo            ;Utility Beneficial,Damage Shield,Group v2
-assonance60=       Angstlich's Assonance              ;Damage Over Time,Magic,Single
+a_master182=Alt,Summon Personal Tribute Master ;Summon Tribute Master,4
+a_enabled227=Alt,Reaching Notes: Enabled        ;Disable Ability,5
+a_origin331=Alt,Origin                         ;Origin,1
+a_peddler453=Alt,Summon Permutation Peddler     ;Summon Distiller Vendor,4
+a_devoted481=Alt,Lesson of the Devoted          ;Lesson of the Devoted,4
+a_faithful482=Alt,Infusion of the Faithful       ;Infusion of the Faithful,4
+a_jester483=Alt,Chaotic Jester                 ;Chaotic Jester,4
+a_recovery484=Alt,Expedient Recovery             ;Expedient Recovery,4
+a_servant485=Alt,Steadfast Servant              ;Steadfast Servant,4
+a_recovery486=Alt,Staunch Recovery               ;Staunch Recovery,4
+a_resolute487=Alt,Intensity of the Resolute      ;Intensity of the Resolute,4
+a_heroes511=Alt,Throne of Heroes               ;Throne of Heroes,4
+a_experience2000=Alt,Armor of Experience            ;Armor of Experience I,4
+a_agent8081=Alt,Summon Resupply Agent          ;Summon Resupply Agent,4
+a_banker8130=Alt,Summon Clockwork Banker        ;Summon Clockwork Banker,4
+i_totem=Item,Worn Totem,Blessing of Swiftness
+battle1=Chant of Battle                    ;Statistic Buffs,Armor Class,Group v2
+dissonance2=Chords of Dissonance               ;Damage Over Time,Magic,PB AE
+lyric4=Lyssa's Locating Lyric             ;Utility Beneficial,Misc,Self
+accelerando5=Selo's Accelerando                 ;Utility Beneficial,Movement,Group v2
+restoration6=Hymn of Restoration                ;Regen,Health,Group v2
+warsong7=Jonthan's Whistling Warsong        ;Utility Beneficial,Haste,Self
+lament8=Kelin's Lugubrious Lament          ;Utility Detrimental,Calm,Single
+rhythms9=Elemental Rhythms                  ;Statistic Buffs,Resist Buff,Group v2
+monologue9=Magical Monologue                  ;Utility Beneficial,Misc,Self
+arms10=Anthem de Arms                     ;Utility Beneficial,Haste,Group v2
+carillon11=Cinda's Charismatic Carillon       ;Utility Beneficial,Alliance,Single
+bellow12=Brusco's Boastful Bellow           ;Direct Damage,Magic,Single
+rhythms13=Purifying Rhythms                  ;Statistic Buffs,Resist Buff,Group v2
+libretto14=Lyssa's Cataloging Libretto        ;Utility Beneficial,Misc,Single
+lullaby15=Kelin's Lucid Lullaby              ;Utility Detrimental,Enthrall,Single
+sustenance15=Song of Sustenance                 ;Utility Beneficial,Misc,Group v2
+ayre16=Tarew's Aquatic Ayre               ;Utility Beneficial,Misc,Group v2
+rhythms17=Guardian Rhythms                   ;Statistic Buffs,Resist Buff,Group v2
+discord18=Denon's Disruptive Discord         ;Damage Over Time,Magic,PB AE
+clouding19=Shauri's Sonorous Clouding         ;Utility Beneficial,Invisibility,Group v2
+clarity20=Cassindra's Chant of Clarity       ;Regen,Mana,Group v2
+binding20=Largo's Melodic Binding            ;Utility Detrimental,Slow,PB AE
+motion21=Melanie's Mellifluous Motion       ;Utility Beneficial,Shadowstep,Group v2
+melody22=Alenia's Disenchanting Melody      ;Utility Detrimental,Dispel,Group v2
+chain23=Selo's Consonant Chain             ;Utility Detrimental,Slow,Single
+concord24=Lyssa's Veracious Concord          ;Utility Beneficial,Vision,Group v2
+warmth25=Psalm of Warmth                    ;Utility Beneficial,Damage Shield,Group v2
+speed25=Selo's Rhythm of Speed             ;Utility Beneficial,Movement,Group v2
+screech26=Angstlich's Appalling Screech      ;Utility Detrimental,Fear,PB AE
+sirens27=Solon's Song of the Sirens         ;Utility Detrimental,Charm,Single
+strike28=Crission's Pixie Strike            ;Utility Detrimental,Enthrall,Single
+vitality29=Psalm of Vitality                  ;Utility Beneficial,Damage Shield,Group v2
+amplification30=Amplification                      ;Utility Beneficial,Misc,Self
+chant30=Fufil's Curtailing Chant           ;Damage Over Time,Magic,Single
+eagles31=Agilmente's Aria of Eagles         ;Utility Beneficial,Levitate,Group v2
+clarity32=Cassindra's Chorus of Clarity      ;Regen,Mana,Group v2
+cooling33=Psalm of Cooling                   ;Utility Beneficial,Damage Shield,Group v2
+soothing34=Cantata of Soothing                ;Regen,Health/Mana,Group v2
+vision34=Lyssa's Solidarity of Vision       ;Utility Beneficial,Vision,Single
+dissension35=Denon's Dissension                 ;Utility Detrimental,Mana Drain,PB AE
+celerity36=Vilia's Verses of Celerity         ;Utility Beneficial,Haste,Group v2
+purity37=Psalm of Purity                    ;Utility Beneficial,Damage Shield,Group v2
+flame38=Tuyen's Chant of Flame             ;Damage Over Time,Fire,Single
+dancing39=Katta's Song of Sword Dancing      ;Utility Beneficial,Combat Innates,Group v2
+bravura39=Solon's Bewitching Bravura         ;Utility Detrimental,Charm,Single
+dreams40=Sionachie's Dreams                 ;Utility Detrimental,Enthrall,Single
+shielding41=Psalm of Mystic Shielding          ;Statistic Buffs,Resist Buff,Group v2
+crescendo42=McVaxius' Berserker Crescendo      ;Utility Beneficial,Haste,Group v2
+dirge43=Denon's Desperate Dirge            ;Direct Damage,Magic,Targeted AE
+elegy44=Cassindra's Elegy                  ;Statistic Buffs,Wisdom/Intelligence,Group v2
+provocation45=Jonthan's Provocation              ;Utility Beneficial,Haste,Self
+preservation47=Niv's Melody of Preservation       ;Utility Beneficial,Misc,Group v2
+chorus49=Selo's Accelerating Chorus         ;Utility Beneficial,Movement,Group v2
+songs49=Shield of Songs                    ;Utility Beneficial,Rune,Group v2
+ervaj50=Melody of Ervaj                    ;Utility Beneficial,Haste,Group v2
+victory50=Verses of Victory                  ;Utility Beneficial,Haste,Group v2
+binding51=Largo's Assonant Binding           ;Utility Detrimental,Slow,Single
+travel51=Selo's Song of Travel              ;Utility Beneficial,Movement,Group v2
+shir52=Battlecry of the Vah Shir          ;Utility Beneficial,Haste,Group v2
+wee52=Nillipus' March of the Wee         ;Utility Beneficial,Rune,Group v2
+fire53=Rizlona's Fire                     ;Utility Beneficial,Spell Focus,Group v1
+twilight53=Song of Twilight                   ;Utility Detrimental,Enthrall,Single
+strain54=Selo's Assonant Strain             ;Utility Detrimental,Slow,PB AE
+celerity54=Vilia's Chorus of Celerity         ;Utility Beneficial,Haste,Group v2
+insight55=Aura of Insight                    ;Auras,Haste/Spell Focus,Self
+replenishment55=Cantata of Replenishment           ;Regen,Health/Mana,Group v2
+ayonae58=Dreams of Ayonae                   ;Utility Detrimental,Enthrall,Single
+inspiration58=Jonthan's Inspiration              ;Utility Beneficial,Haste,Self
+shir60=Warsong of the Vah Shir            ;Utility Beneficial,Haste,Group v2
+rondo57=McVaxius' Rousing Rondo            ;Utility Beneficial,Damage Shield,Group v2
+assonance60=Angstlich's Assonance              ;Damage Over Time,Magic,Single
